0.51pre
	* Erik Andersen -- added env applet
	* Erik Andersen -- Split utility.c into libbb
	* <fixme>


	 -Erik Andersen, not yet released


0.50
	* Erik Andersen -- added ifconfig interface status reporting 
	* Erik Andersen -- Debian packaging updates
	* Erik Andersen -- lash environment variable expansion rewritten,
	    with lots of help/fixes/testing from Larry Doolittle.
	* Erik Andersen -- Fix use of busybox with dmalloc debugging lib
	* Erik Andersen -- fixed ls behavior for broken or very narrow terminals.
	* Erik Andersen -- stub umount2 and pivot_root if they are not available.
	* Erik Andersen -- libc5 fixes
	* Erik Andersen -- make init work with devfsd
	* Erik Andersen -- fixed df for nfs and dos where blksize = 512
	* Erik Andersen -- Make sure libpwd.a is linked _last_ so it 
	    overrides the system pwd/grp 
	* Christophe Boyanique -- added an optional egrep alias for grep.
	* Christophe Boyanique -- added optional 'rm -i' support.
	* Kenneth Chalmers and Erik Andersen -- fixed ln so it
	    behaves when given no arguments (prints usage) and when
	    given just one arg (tries to make a link in the cwd).
	* Magnus Damm -- added a tftp applet  
	* Magnus Damm -- powerpc support for busybox insmod.
	* David Douthitt -- fixed a build error in df.c when 
	    BB_FEATURE_HUMAN_READABLE was disabled
	* John Beppu -- wrote autodocifier.pl, which will be used to auto-
	    generate the documentation from the source code, making life
	    much simpler for all.
	* Magnus Damm <damm@opensource.se> -- Fixed an 'inner scope var
	    masking outer scope var with same name' bug that prevented 
	    the loopback device from being unmounted if mount() failed.
	* Larry Doolittle -- rewrote ifconfig to make it smaller 
	* Larry Doolittle and Erik Andersen -- cleanups to pristine source
	* Larry Doolittle -- many bugfixes resulting from regression testing
	* Gennady Feldman -- split syslogd.c into syslogd and klogd