@@ -28,9 +28,9 @@ extern int reboot_main(int argc, char **argv)
 {
 #ifdef BB_FEATURE_LINUXRC
 	/* don't assume init's pid == 1 */
-	return(kill(*(find_pid_by_name("init")), SIGINT));
+	return(kill(*(find_pid_by_name("init")), SIGTERM));
 #else
-	return(kill(1, SIGINT));
+	return(kill(1, SIGTERM));
 #endif
 }
 
